more binary trees

--- a/classic/all_perm.ipynb
+++ b/classic/all_perm.ipynb
@@ -9,6 +9,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aaa', 'aab', 'aac', 'aba', 'abb', 'abc', 'aca', 'acb', 'acc', 'baa', 'bab', 'bac', 'bba', 'bbb', 'bbc', 'bca', 'bcb', 'bcc', 'caa', 'cab', 'cac', 'cba', 'cbb', 'cbc', 'cca', 'ccb', 'ccc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def combinations(chars, k=3):\n",
+    "    \"\"\"All possible combinations from an alphabet.\"\"\"\n",
+    "    return [a+b for a in combinations(chars, k-1) for b in chars] if k else ['']\n",
+    "\n",
+    "print(combinations(['a','b','c'], 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'acb', 'bac', 'bca', 'cba', 'cab']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def permutations(chars):\n",
+    "    \"\"\"All possible permutations of an alphabet\"\"\"\n",
+    "    if not chars: return ['']\n",
+    "    return [a+b for a in chars for b in permutations(set(chars)-set([a]))] \n",
+    "\n",
+    "print(permutations(['a','b','c']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', 'b', 'c'], ['a', 'c', 'b'], ['b', 'a', 'c'], ['b', 'c', 'a'], ['c', 'b', 'a'], ['c', 'a', 'b']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def permutations(chars):\n",
+    "    \"\"\"Same, but with lists.\"\"\"\n",
+    "    if not chars: return [[]]\n",
+    "    return [[a]+b for a in chars for b in permutations(set(chars)-set([a]))] \n",
+    "\n",
+    "print(permutations(['a','b','c']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below are older, bulkier solutions; keeping them here for history."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
