--- a/classic/bst_red_black.ipynb
+++ b/classic/bst_red_black.ipynb
@@ -4,21 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Binary seach tree\n",
-    "\n",
-    "Each node breaks the tree in two. All keys smaller than its key go to the left, all keys higher - to the right."
+    "# Red-Black tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start with a basic tree."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3:hmm(2:bird(None)(None))(7:dog(5:cat(None)(None))(8:possum(None)(None)))\n"
+      "5:five(3:three(None, 4:dog(None, None)), None)\n",
+      "dog\n"
      ]
     }
    ],
@@ -68,33 +74,13 @@
     "        if self.root==None: return None\n",
     "        return self.root.read(key)\n",
     "            \n",
-    "b = BH()\n",
-    "b.write(3,'hmm')\n",
-    "b.write(7,'dog')\n",
-    "b.write(5,'cat')\n",
-    "b.write(8,'possum')\n",
-    "b.write(2,'bird')\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None, None, 'bird', 'hmm', None, 'cat', None, 'dog', 'possum', None]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[b.read(i) for i in range(10)]"
+    "# Test\n",
+    "t = Tree()\n",
+    "t.add(5, 'five')\n",
+    "t.add(3,'three')\n",
+    "t.add(4,'dog')\n",
+    "print(t)\n",
+    "print(t.find(4))"
    ]
   }
  ],
@@ -118,5 +104,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
