--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,23 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4 1 2\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['aaa',\n",
+       " 'aab',\n",
+       " 'aac',\n",
+       " 'aba',\n",
+       " 'abb',\n",
+       " 'abc',\n",
+       " 'aca',\n",
+       " 'acb',\n",
+       " 'acc',\n",
+       " 'baa',\n",
+       " 'bab',\n",
+       " 'bac',\n",
+       " 'bba',\n",
+       " 'bbb',\n",
+       " 'bbc',\n",
+       " 'bca',\n",
+       " 'bcb',\n",
+       " 'bcc',\n",
+       " 'caa',\n",
+       " 'cab',\n",
+       " 'cac',\n",
+       " 'cba',\n",
+       " 'cbb',\n",
+       " 'cbc',\n",
+       " 'cca',\n",
+       " 'ccb',\n",
+       " 'ccc']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = 1\n",
-    "b = 2\n",
-    "c = 4\n",
-    "a,b,c = c,a,b\n",
-    "print(a,b,c)"
+    "def permute(chars, k=3):\n",
+    "    \"\"\"Pemute these chars\"\"\"\n",
+    "    return [a+b for a in permute(chars, k-1) for b in chars] if k else ['']\n",
+    "\n",
+    "permute(['a','b','c'], 3)"
    ]
   }
  ],
