generators: moved & commented

--- a/classic/generate_all_graphs.ipynb
+++ b/classic/generate_all_graphs.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate all connected graphs (doesn't work)"
+    "# Generate all connected graphs\n",
+    "\n",
+    "This notebook generates all possible graphs with a given number of nodes; then selects from them all graphs that are 1) connected, 2) not isomorphic to other graphs in the set. On mylaptop it runs instantly for `n_vertices` from 2 to 5, takes a few seconds for n=6, and a few minutes for n=7. As the complexity is $O(\\exp N^2)$, we can expect it to run a few hours for n=8, and a few days, maybe a week, for n=9 :)"
    ]
   },
   {
