All queens on nxn board

--- a/lil_problems/orthogonal_latin_squares.ipynb
+++ b/lil_problems/orthogonal_latin_squares.ipynb
@@ -58,7 +58,7 @@
     "        for j in range(N):\n",
     "            table[i,j,k] = (i*(k+1) + j) % N\n",
     "\n",
-    "print(\"\\nThe Greko-Roman Square:\")\n",
+    "print(\"\\nThe Graeco-Roman Square:\")\n",
     "for i in range(N):\n",
     "    for j in range(N):\n",
     "        for k in range(K):\n",
