--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 5 6]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1,2,3],[4,5,6]])\n",
+    "print(a[1])\n",
+    "print(a[1,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
