old kickstarter problems moved here

--- a/lil_problems/group_scheduling_problem.ipynb
+++ b/lil_problems/group_scheduling_problem.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
     }
    ],
    "source": [
-    "def groups(n, groupsize):\n",
+    "def groups_old(n, groupsize):\n",
     "    \"\"\"Naive forward-only approach (no treeing).\"\"\"\n",
     "    is_day_successful = True\n",
     "    ngroups = n // groupsize\n",
@@ -90,7 +90,7 @@
     "        schedule.append(output_form)\n",
     "    return schedule\n",
     "                \n",
-    "g = groups(20,2)\n",
+    "g = groups_old(20,2)\n",
     "for i in range(len(g)): print(i,g[i])"
    ]
   },
