--- a/lil_problems/number_persistence.ipynb
+++ b/lil_problems/number_persistence.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Number persistence\n",
     "\n",
-    "Not really a problem per se, but just something from numberfile: https://www.youtube.com/watch?v=Wim9WJeDTHQ"
+    "Not really a problem per se, but just something from numberfile: https://www.youtube.com/watch?v=Wim9WJeDTHQ\n",
+    "\n",
+    "(Multiply all digits, get a new number. Repeat until a single-digit is obtained. Count the iterations)."
    ]
   },
   {
@@ -173,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
