--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -18,6 +18,89 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Find ones: [[0]\n",
+      " [2]]\n",
+      "Find twos: [[1]\n",
+      " [3]]\n",
+      "Find threes: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,1,2])\n",
+    "print('Find ones:', np.argwhere(a==1))\n",
+    "print('Find twos:', np.argwhere(a==2))\n",
+    "print('Find threes:', np.argwhere(a==3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False  True  True]\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([1,2,3,4,5])\n",
+    "print(a>3)\n",
+    "print(np.any(a>3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.any(np.array([0,0,0,0])))\n",
+    "print(np.any(np.array([1,0,0,0])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False==0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "[4 5 6]\n",
       "[4 5 6]\n"
      ]
