Russian elections data

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -114,7 +114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['abc', 'acb', 'bac', 'bca', 'cab', 'cba']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def permute(chars):\n",
+    "    if len(chars)==1: return [chars]\n",
+    "    return [chars[i]+b for i in range(len(chars)) for b in permute(chars[:i] + chars[(i+1):])]\n",
+    "\n",
+    "permute('abc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -149,17 +173,17 @@
        " 'ccc']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def permute(chars, k=3):\n",
+    "def combine(chars, k=3):\n",
     "    \"\"\"Pemute these chars\"\"\"\n",
-    "    return [a+b for a in permute(chars, k-1) for b in chars] if k else ['']\n",
+    "    return [a+b for a in combine(chars, k-1) for b in chars] if k else ['']\n",
     "\n",
-    "permute(['a','b','c'], 3)"
+    "combine(['a','b','c'], 3)"
    ]
   }
  ],
