RU vote: cleaned data

--- a/ru_vote_2020/transform_data.ipynb
+++ b/ru_vote_2020/transform_data.ipynb
@@ -29,58 +29,355 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>reg</th>\n",
+       "      <th>tik</th>\n",
+       "      <th>uik</th>\n",
+       "      <th>Число участников голосования, включенных в список участников голосования на момент окончания голосования</th>\n",
+       "      <th>Число бюллетеней, выданных участникам голосования</th>\n",
+       "      <th>Число бюллетеней, содержащихся в ящиках для голосования</th>\n",
+       "      <th>Число недействительных бюллетеней</th>\n",
+       "      <th>ДА</th>\n",
+       "      <th>НЕТ</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Общероссийское голосование по вопросу одобрени...</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>УИК №1</td>\n",
+       "      <td>2277.0</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>1925.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1749.0</td>\n",
+       "      <td>176.0</td>\n",
+       "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Общероссийское голосование по вопросу одобрени...</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>УИК №2</td>\n",
+       "      <td>2694.0</td>\n",
+       "      <td>2290.0</td>\n",
+       "      <td>2290.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2117.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Общероссийское голосование по вопросу одобрени...</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>УИК №3</td>\n",
+       "      <td>2865.0</td>\n",
+       "      <td>2441.0</td>\n",
+       "      <td>2441.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2171.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Общероссийское голосование по вопросу одобрени...</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>УИК №4</td>\n",
+       "      <td>2054.0</td>\n",
+       "      <td>1669.0</td>\n",
+       "      <td>1669.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1381.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Общероссийское голосование по вопросу одобрени...</td>\n",
+       "      <td>Республика Адыгея (Адыгея)</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>УИК №5</td>\n",
+       "      <td>714.0</td>\n",
+       "      <td>607.0</td>\n",
+       "      <td>607.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>473.0</td>\n",
+       "      <td>133.0</td>\n",
+       "      <td>http://www.vybory.izbirkom.ru/region/izbirkom?...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['name', 'reg', 'tik', 'uik',\n",
-       "       'Число участников голосования, включенных в список участников голосования на момент окончания голосования',\n",
-       "       'Число бюллетеней, выданных участникам голосования',\n",
-       "       'Число бюллетеней, содержащихся в ящиках для голосования',\n",
-       "       'Число недействительных бюллетеней', 'ДА', 'НЕТ', 'url'],\n",
-       "      dtype='object')"
+       "                                                name  \\\n",
+       "0  Общероссийское голосование по вопросу одобрени...   \n",
+       "1  Общероссийское голосование по вопросу одобрени...   \n",
+       "2  Общероссийское голосование по вопросу одобрени...   \n",
+       "3  Общероссийское голосование по вопросу одобрени...   \n",
+       "4  Общероссийское голосование по вопросу одобрени...   \n",
+       "\n",
+       "                          reg           tik     uik  \\\n",
+       "0  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №1   \n",
+       "1  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №2   \n",
+       "2  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №3   \n",
+       "3  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №4   \n",
+       "4  Республика Адыгея (Адыгея)  1 Адыгейская  УИК №5   \n",
+       "\n",
+       "   Число участников голосования, включенных в список участников голосования на момент окончания голосования  \\\n",
+       "0                                             2277.0                                                          \n",
+       "1                                             2694.0                                                          \n",
+       "2                                             2865.0                                                          \n",
+       "3                                             2054.0                                                          \n",
+       "4                                              714.0                                                          \n",
+       "\n",
+       "   Число бюллетеней, выданных участникам голосования  \\\n",
+       "0                                             1925.0   \n",
+       "1                                             2290.0   \n",
+       "2                                             2441.0   \n",
+       "3                                             1669.0   \n",
+       "4                                              607.0   \n",
+       "\n",
+       "   Число бюллетеней, содержащихся в ящиках для голосования  \\\n",
+       "0                                             1925.0         \n",
+       "1                                             2290.0         \n",
+       "2                                             2441.0         \n",
+       "3                                             1669.0         \n",
+       "4                                              607.0         \n",
+       "\n",
+       "   Число недействительных бюллетеней      ДА    НЕТ  \\\n",
+       "0                                0.0  1749.0  176.0   \n",
+       "1                                7.0  2117.0  166.0   \n",
+       "2                               11.0  2171.0  259.0   \n",
+       "3                                8.0  1381.0  280.0   \n",
+       "4                                1.0   473.0  133.0   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  http://www.vybory.izbirkom.ru/region/izbirkom?...  \n",
+       "1  http://www.vybory.izbirkom.ru/region/izbirkom?...  \n",
+       "2  http://www.vybory.izbirkom.ru/region/izbirkom?...  \n",
+       "3  http://www.vybory.izbirkom.ru/region/izbirkom?...  \n",
+       "4  http://www.vybory.izbirkom.ru/region/izbirkom?...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nans in nominal (to remove): 273\n",
+      "['Адыгея' 'Алтай' 'Алтайский' 'Амурская' 'Архангельская' 'Астраханская'\n",
+      " 'Башкортостан' 'Белгородская' 'Брянская' 'Бурятия' 'Владимирская'\n",
+      " 'Волгоградская' 'Вологодская' 'Воронежская' 'Дагестан' 'Еврейская'\n",
+      " 'Забайкальский' 'Ивановская' 'Ингушетия' 'Иркутская'\n",
+      " 'Кабардино-Балкарская' 'Калининградская' 'Калмыкия' 'Калужская'\n",
+      " 'Камчатский' 'Карачаево-Черкесская' 'Карелия' 'Кемеровская' 'Кировская'\n",
+      " 'Коми' 'Костромская' 'Краснодарский' 'Красноярский' 'Крым' 'Курганская'\n",
+      " 'Курская' 'Ленинградская' 'Липецкая' 'Магаданская' 'Марий Эл' 'Мордовия'\n",
+      " 'Москва' 'Московская' 'Мурманская' 'Ненецкий' 'Нижегородская'\n",
+      " 'Новгородская' 'Новосибирская' 'Омская' 'Оренбургская' 'Орловская'\n",
+      " 'Пензенская' 'Пермский' 'Приморский' 'Псковская' 'Ростовская' 'Рязанская'\n",
+      " 'Самарская' 'Санкт-Петербург' 'Саратовская' 'Саха' 'Сахалинская'\n",
+      " 'Свердловская' 'Севастополь' 'Смоленская' 'Ставропольский' 'Тамбовская'\n",
+      " 'Татарстан' 'Тверская' 'Томская' 'Тульская' 'Тыва' 'Тюменская'\n",
+      " 'Удмуртская' 'Ульяновская' 'Хабаровский' 'Хакасия' 'Ханты-Мансийский'\n",
+      " 'Челябинская' 'Чеченская' 'Чукотский' 'Ямало-Ненецкий' 'Ярославская']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>region</th>\n",
+       "      <th>tik</th>\n",
+       "      <th>uik</th>\n",
+       "      <th>nominal</th>\n",
+       "      <th>given</th>\n",
+       "      <th>received</th>\n",
+       "      <th>damaged</th>\n",
+       "      <th>yes</th>\n",
+       "      <th>no</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2277</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>1925</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1749</td>\n",
+       "      <td>176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2694</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>2290</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2117</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2865</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>2441</td>\n",
+       "      <td>11</td>\n",
+       "      <td>2171</td>\n",
+       "      <td>259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2054</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>1669</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1381</td>\n",
+       "      <td>280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Адыгея</td>\n",
+       "      <td>1 Адыгейская</td>\n",
+       "      <td>5</td>\n",
+       "      <td>714</td>\n",
+       "      <td>607</td>\n",
+       "      <td>607</td>\n",
+       "      <td>1</td>\n",
+       "      <td>473</td>\n",
+       "      <td>133</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   region           tik  uik  nominal  given  received  damaged   yes   no\n",
+       "0  Адыгея  1 Адыгейская    1     2277   1925      1925        0  1749  176\n",
+       "1  Адыгея  1 Адыгейская    2     2694   2290      2290        7  2117  166\n",
+       "2  Адыгея  1 Адыгейская    3     2865   2441      2441       11  2171  259\n",
+       "3  Адыгея  1 Адыгейская    4     2054   1669      1669        8  1381  280\n",
+       "4  Адыгея  1 Адыгейская    5      714    607       607        1   473  133"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#data.head()"
+    "df = data.copy()\n",
+    "df = df.drop(['name', 'url'], axis=1)\n",
+    "df = df.rename(\n",
+    "    {'reg': 'region',\n",
+    "    'Число участников голосования, включенных в список участников голосования на момент окончания голосования': 'nominal',\n",
+    "    'Число бюллетеней, выданных участникам голосования': 'given',\n",
+    "    'Число бюллетеней, содержащихся в ящиках для голосования': 'received',\n",
+    "    'Число недействительных бюллетеней': 'damaged',\n",
+    "    'ДА': 'yes', 'НЕТ': 'no'},\n",
+    "    axis=1)\n",
+    "\n",
+    "nans = df['nominal'].isna().values\n",
+    "print(f'Nans in nominal (to remove): {np.sum(nans)}')\n",
+    "df = df[:][np.logical_not(nans)]\n",
+    "\n",
+    "df['uik'] = df['uik'].str[5:].astype(int)\n",
+    "df[['nominal', 'given', 'received', 'damaged', 'yes', 'no']] = df[\n",
+    "    ['nominal', 'given', 'received', 'damaged', 'yes', 'no']].astype(int)\n",
+    "\n",
+    "dictionary = {' край': '', ' автономная область': '', ' область': '', ' автономный округ':'',\n",
+    "              'Республика ': '', ' Республика': '', 'город ':'',\n",
+    "              ' \\(Адыгея\\)': '', ' \\(Татарстан\\)': '', ' \\(Якутия\\)':'',\n",
+    "             ' - Кузбасс':'', ' - Югра':''}\n",
+    "for key,val in dictionary.items():\n",
+    "    df['region'] = df['region'].str.replace(key, val)\n",
+    "\n",
+    "print(np.unique(df['region']))\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "total = data['Число участников голосования, включенных в список участников голосования на момент окончания голосования'].values\n",
-    "voted = data['Число бюллетеней, содержащихся в ящиках для голосования'].values\n",
-    "vote_yes = data['ДА'].values\n",
-    "vote_no  = data['НЕТ'].values\n",
-    "region   = data['reg'] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 274,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#np.unique(data['reg'])"
+    "df.to_csv('cleaned.csv', index=False)"
    ]
   }
  ],
